# ai-assistant-test

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_CONTEXT.md  MEMORY.md  PLAN.md  README.md  auth_google.py  auth_telegram.py  main.py  pyproject.toml  setup_and_auth.bat  test_gmail.py  test_store.py
docs/: container-network-issue.md
src/agent/: calendar.py  core.py  prompts.py
src/bot/: handlers.py
src/connectors/: base.py  gmail_connector.py  telegram_connector.py
src/store/: database.py  models.py
tests/: test_telegram_connector.py
